# ex4

./: CMakeLists.txt  ClientHandler  ClientHandler.cpp  ClientHandler.hpp  Graph.cpp  Graph.hpp  Logger.cpp  README.md  SearchAlgo.cpp  SearchAlgo.hpp  Server  Server.cpp  Server.hpp  Solver  Solver.cpp  Solver.hpp  detail.txt  lo  log.txt  main  main.cpp
matrix/: ClassMatrix.cpp  MatrixOperation.cpp  MatrixOperation.hpp  MatrixParser  MatrixParser.cpp  MatrixParser.hpp
src/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.hpp  FileExceptions.cpp  FileExceptions.hpp  Graph  Graph.cpp  Graph.hpp  Logger.cpp  Logger.hpp  SearchAlgo.cpp  SearchAlgo.hpp  Server  Server.cpp  Server.hpp  Solver.cpp  Solver.hpp  main  main.cpp
src/matrix/: ClassMatrix.cpp  ClassMatrix.hpp  ErrorCode.c  ErrorCode.h  Matrix.c  Matrix.h  MatrixExceptions.cpp  MatrixExceptions.hpp  MatrixParser.cpp  MatrixParser.hpp
